--- a/4-LibraryKullanimi/4-LibraryKullanimi.csproj
+++ b/4-LibraryKullanimi/4-LibraryKullanimi.csproj
@@ -3,14 +3,13 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>_2_ClassOrnekler</RootNamespace>
+    <RootNamespace>_4_LibraryKullanimi</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="CepTelefonlari\" />
-    <Folder Include="Emlak\" />
+    <ProjectReference Include="..\3-ClassLib\3-ClassLib.csproj" />
   </ItemGroup>
 
 </Project>
