--- a/3-ClassLib/3-ClassLib.csproj
+++ b/3-ClassLib/3-ClassLib.csproj
@@ -1,16 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>_2_ClassOrnekler</RootNamespace>
+    <RootNamespace>_3_ClassLib</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="CepTelefonlari\" />
-    <Folder Include="Emlak\" />
-  </ItemGroup>
 
 </Project>
